#3: fix onset overflow on mobile screens

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -51,7 +51,7 @@ button {
 
 .onset {
   max-width: 699px;
-  height: 100vh;
+  height: calc(100vh - 2rem);
   padding: 20px;
   margin: auto auto;
   background-color: #074B87;
